kubernetes/customer-service/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: customer-service
  namespace: dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: customer-service


  template:

    metadata:
      labels:
        app: customer-service


    spec:
      containers:
        - name: customer-service
          image: customer-service:v1.0.1
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "250m"
              memory: 1Gi
            limits:
              cpu: "400m"
              memory: 2Gi

          ports:
            - containerPort: 5000
