kubernetes/customer-service/service.yml
apiVersion: v1
kind: Service


metadata:
  name: customer-service

spec:
  type: NodePort


  selector:
    app: customer-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
