kubernetes/customer-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: customer-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: customer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  number: 80
